--- a/test.css
+++ b/test.css
@@ -127,7 +127,7 @@ nav h3 {
     line-height: 8vw;
 }
 
-#page1 video{
+#video{
     position: relative;
     border-radius: 30px ;
     margin-top: 4vh;
@@ -257,12 +257,4 @@ nav h3 {
 
 
 
-  a {
-    color: inherit;
-    text-decoration: none;
-}
-a:hover {
-    color: white;
-    text-decoration: underline;
-}
 
